include/dss_capi.h

    /*
    Name of the TCCcurve object that determines fuse blowing.
    */
    DSS_CAPI_DLL char* Fuses_Get_TCCcurve(void);
    /*
    Name of the TCCcurve object that determines fuse blowing.
    */
    DSS_CAPI_DLL void Fuses_Set_TCCcurve(char* Value);
    /*
    Multiplier or actual amps for the TCCcurve object. Defaults to 1.0.  Multipliy current values of TCC curve by this to get actual amps.
    */
    DSS_CAPI_DLL double Fuses_Get_RatedCurrent(void);
    /*
    Multiplier or actual fuse amps for the TCC curve. Defaults to 1.0. Has to correspond to the Current axis of TCCcurve object.
    */
    DSS_CAPI_DLL void Fuses_Set_RatedCurrent(double Value);
    /*
    A fixed delay time in seconds added to the fuse blowing time determined by the TCC curve. Default is 0.
    */
    DSS_CAPI_DLL double Fuses_Get_Delay(void);
    DSS_CAPI_DLL void Fuses_Open(void);
    DSS_CAPI_DLL void Fuses_Close(void);
    /*
    Fixed delay time in seconds added to the fuse blowing time to represent fuse clear or other delay.
    */
    DSS_CAPI_DLL void Fuses_Set_Delay(double Value);
    DSS_CAPI_DLL uint16_t Fuses_IsBlown(void);
    /*
    Get/set active fuse by index into the list of fuses. 1 based: 1..count
    */
    DSS_CAPI_DLL int32_t Fuses_Get_idx(void);
    /*
    Set Fuse active by index into the list of fuses. 1..count
    */
    DSS_CAPI_DLL void Fuses_Set_idx(int32_t Value);
    /*
    Number of phases, this fuse.
    */
    DSS_CAPI_DLL int32_t Fuses_Get_NumPhases(void);