src/v8/CAPI_Fuses.pas


function Fuses_Get_TCCcurve(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(Fuses_Get_TCCcurve_AnsiString());
end;
//------------------------------------------------------------------------------
procedure Fuses_Set_TCCcurve(const Value: PAnsiChar); CDECL;
var
    elem: TFuseObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then
        Exit;
    elem := ActiveCircuit[ActiveActor].Fuses.Active;
    if elem <> NIL then
        Set_parameter('FuseCurve', Value);
end;
//------------------------------------------------------------------------------
function Fuses_Get_RatedCurrent(): Double; CDECL;
var
    elem: TFuseObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then
        Exit;
    elem := ActiveCircuit[ActiveActor].Fuses.Active;
    if elem <> NIL then
        Result := elem.RatedCurrent
    else
        Result := -1.0;
end;
//------------------------------------------------------------------------------
procedure Fuses_Set_RatedCurrent(Value: Double); CDECL;
var
    elem: TFuseObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then
        Exit;
    elem := ActiveCircuit[ActiveActor].Fuses.Active;
    if elem <> NIL then
        Set_parameter('RatedCurrent', Format('%.8g ', [Value]));
end;
//------------------------------------------------------------------------------
function Fuses_Get_Delay(): Double; CDECL;
var
    elem: TFuseObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then
        Exit;
    elem := ActiveCircuit[ActiveActor].Fuses.Active;
    if elem <> NIL then
        Result := elem.DelayTime
    else
        Result := -1.0;
end;
//------------------------------------------------------------------------------
procedure Fuses_Open(); CDECL;
var
    elem: TFuseObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then
        Exit;
    elem := ActiveCircuit[ActiveActor].Fuses.Active;
    if elem <> NIL then
        elem.ControlledElement.Closed[0, ActiveActor] := FALSE; // Open all phases
end;
//------------------------------------------------------------------------------
procedure Fuses_Close(); CDECL;
var
    elem: TFuseObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then
        Exit;
    elem := ActiveCircuit[ActiveActor].Fuses.Active;
    if elem <> NIL then
        elem.Reset;
end;
//------------------------------------------------------------------------------
procedure Fuses_Set_Delay(Value: Double); CDECL;
var
    elem: TFuseObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then
        Exit;
    elem := ActiveCircuit[ActiveActor].Fuses.Active;
    if elem <> NIL then
        Set_parameter('Delay', Format('%.8g ', [Value]));
end;
//------------------------------------------------------------------------------
function Fuses_IsBlown(): Wordbool; CDECL;
// Return TRUE if any phase blown
var
    elem: TFuseObj;
    i: Integer;
begin
    Result := FALSE;
    if ActiveCircuit[ActiveActor] = NIL then
        Exit;
    elem := ActiveCircuit[ActiveActor].Fuses.Active;
    if elem <> NIL then
    begin
        for i := 1 to elem.nphases do
            if not elem.ControlledElement.Closed[i, ActiveActor] then
                Result := TRUE;
    end;
end;
//------------------------------------------------------------------------------
function Fuses_Get_idx(): Integer; CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        Result := ActiveCircuit[ActiveActor].Fuses.ActiveIndex
    else
        Result := 0
end;
//------------------------------------------------------------------------------
procedure Fuses_Set_idx(Value: Integer); CDECL;
var
    pFuse: TFuseObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then
        Exit;
    pFuse := ActiveCircuit[ActiveActor].Fuses.Get(Value);
    if pFuse = NIL then
    begin
        DoSimpleMsg('Invalid Fuse index: "' + IntToStr(Value) + '".', 656565);
        Exit;
    end;
    ActiveCircuit[ActiveActor].ActiveCktElement := pFuse;
end;
//------------------------------------------------------------------------------
function Fuses_Get_NumPhases(): Integer; CDECL;
var
    pFuse: TFuseObj;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        pFuse := ActiveCircuit[ActiveActor].Fuses.Active;
        if pFuse <> NIL then
            Result := pFuse.NPhases;
    end;
end;
//------------------------------------------------------------------------------
end.
